--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         </ul>
       </div>
   </div>
-  <script src="java.js"></script>
+  <script src="javascript.js"></script>
 </body>
 </html>
